--- a/gb/23/8/9/n14050509.md
+++ b/gb/23/8/9/n14050509.md
@@ -1,7 +1,7 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
 <table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/19920513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/19920513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
 <tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/19920513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
-<tr><td VALIGN=TOP width="626"><h2 align=center>《七大罪：爱丁堡的恩怨2》影集：英雄之子如今也发光发热</h2>
+<tr><td VALIGN=TOP width="626"><h2 align=center>《七大罪：爱丁堡的恩怨2》影评：英雄之子如今也发光发热</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2023/08/id14050513-628800-600x400.jpg" />
 <h6>《七大罪：爱丁堡的恩怨2》剧照。（Netflix提供）
 </h6>
@@ -33,47 +33,41 @@
 <p>《七大罪：爱丁堡的恩怨2》的篇幅其实比一般的电影短，仅不到1小时，但不会缺少该有的起承转合，对角色心境变化的塑造，也有足够说服力。就整体质感而言，能为已经完结的影集本传再添精彩一笔，不会沦为狗尾续貂。◇</p>
 <figure id="attachment_14050518" aria-describedby="caption-attachment-14050518" style="width: 400px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/08/id14050518-628804.jpg"><img class=" wp-image-14050518" src="https://i.epochtimes.com/assets/uploads/2023/08/id14050518-628804.jpg" alt="" width="400" b="593" /></a><figcaption id="caption-attachment-14050518" class="wp-caption-text">《七大罪：爱丁堡的恩怨2》电影海报。（Netflix提供）</figcaption></figure>
 <p>责任编辑：黄珊妮</p>
-
-<hr>
-
-
 <strong>相关新闻：</strong>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/15/n14034874.md#1">《GRIDMAN UNIVERSE》影评：机器人大战怪兽 也很有故事性</a></li>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/22/n14039566.md#1">《哆啦A梦：大雄与天空的理想乡》影评：美妙乌托邦 也有警世效果</a></li>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/29/n14044015.md#1">《瓢虫女爵和黑猫诺尔大电影》影评：英雄合作 缔造浪漫喜剧</a></li>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/29/n14044196.md#1">《电影版 TOKYO MER 行动急诊室》影评：一场大火 深化医师英雄形象</a></li>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/5/n14048597.md#1">《忍者龟：变种大乱斗》影评：特殊动物融入人类社会 并非不可能</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/16/n14137368.md#1">《青春猪头少年不会梦到红书包女孩》影评：离奇事件再成挑战</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/9/n14132812.md#1">《欢迎来到驹田蒸馏所》影评：复原经典名酒大不易</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/7/n14131226.md#1">《旺卡》影评：美味的巧克力 也可能为视觉盛宴</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/1/n14127527.md#1">《变身沃买尬》影评：一家人交换身体 成打破隔阂契机</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/25/n14124064.md#1">《拿破仑》影评：大起大落的君王 仍是法国一代传奇</a></li>
 <hr>
-
-
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/ntdtv/blob/master/gb/2020/01/05/a102745738.md#1" target="_blank">响彻世界政坛的正义之声</a>  </li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/5/23/n10418231.md#1" target="_blank">晓明：一个枪口余生者的人生之路</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/8/30/n11488493.md#1" target="_blank">苦难中坚守希望 京城姐妹的跌宕人生（2）</a></li>
-<hr>
-
+<li><a href="https://github.com/19920513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank">解体中共复兴中华</a></li><li><a href="https://github.com/19920513/djy/blob/master/gb/17/11/6/n9810260.md#1" target="_blank">林辉：诸葛亮遗迹被毁 责任者江青秘书遭劫</a></li><li><a href="https://github.com/19920513/djy/blob/master/gb/13/5/19/n3874295.md#1" target="_blank">飞瀑：中共酷刑——灌水</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/2/n14046260.md#1">美调查记者：俄战机曾与UFO交战至少45次</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/31/n14045197.md#1">【未解之谜】释迦座下神通第一 目犍连</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/4/n14047678.md#1">【未解之谜】证明轮回存在的基督徒</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/27/n14042958.md#1">春秋首霸齐桓公享富裕奢华  死况极端凄惨预警成真</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/5/n14048452.md#1">一叶知秋立秋到  秋季养生三心法和好食材</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/4/n14047965.md#1">【中国禁闻】门头沟遇难者难计其数 山区亟待救援</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/8/n14050298.md#1">【远见快评】新版“十灾”红潮末日到来？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/3/n14047455.md#1">【百年真相】按比例灭口 镇反运动黑幕</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/6/n14049103.md#1">日专家：坠中等收入陷阱 中国无法成为发达国家</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/7/n14049476.md#1">台风“卡努”90度转弯 中国东北大暴雨将至</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/7/n14049207.md#1">七常委不去灾区 民间追问 党媒发文掩饰</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/6/n14049091.md#1">陈妍希饰演邓丽君 新剧大陆开播日遭闪电撤档</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/6/n14049119.md#1">送4岁儿回冯绍峰家 赵丽颖一举动破复合传闻</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/6/n14049100.md#1">格斗选手穷到睡健身房 巨石强森送他一栋房</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/7/n14049670.md#1">香港知名音乐人陈匡荣病逝 终年52岁</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/7/n14049691.md#1">钟嘉欣快闪香港出席活动 暂不接戏原因曝光</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/6/12/n14014628.md#1">动物脂肪比植物油更健康？专家揭10种食物真相</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/7/n14049379.md#1">美航机长对乘客发号施令 哈佛学者称赞</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/7/n14049197.md#1">高温酷暑 电动汽车续航力将大打折扣</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/30/n14044381.md#1">驼背导致背痛 你应避免这些动作</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/8/n14049804.md#1">心理学家谈抗压：提高情绪韧性 勤练9句话</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/5/n14129958.md#1">威赫西域的汉宣帝 一道柔情诏书显露夫妻的恩义</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/21/n14120907.md#1">【古道人生】结婚十年同寝只一月 夫妻终不能团圆</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/11/n14133709.md#1">【未解之谜】《推背图》47象 紫薇圣人</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/22/2/21/n13594978.md#1">【器乐独奏与协奏曲】布鲁赫《苏格兰幻想曲》，作品第46号</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/6/n14131208.md#1">莫愁女 诗歌里永不老去的佳人</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/15/n14137399.md#1">【人物真相】日本“抗共大使”垂秀夫</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/15/n14137333.md#1">【十字路口】渝火葬场爆满 中共承认新冠变异？</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/15/n14137325.md#1">【新闻大家谈】中南海1号保镳 涉两高层命案？</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/14/n14136615.md#1">中共央视新闻播出辱习画面 后紧急删除</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/14/n14136580.md#1">北京地铁车厢断裂515人送医 近千人雪夜逃离</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/13/n14135801.md#1">周海媚死讯不断反转 堪称现实版《新闻女王》</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/14/n14136609.md#1">范冰冰竹林虎啸礼服入选CNN十大红毯造型</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/12/n14135089.md#1">港星周海媚在北京猝逝 旧爱吕良伟发文悼念</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/13/n14135183.md#1">周海媚离世 曾高调为中共疫苗站台</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/13/n14135870.md#1">10年前拍完未播 周海媚遗作遭拍卖原因曝光</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/21/n14121397.md#1">每日更新：装点节日气氛 给孩子一个惊喜</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/15/n14117110.md#1">FIJI天然自流瓶装水 不含8 种主要过敏原</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/12/n14135019.md#1">苹果防糖尿病、阻癌细胞扩散 品种、吃法全攻略</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/1/n14128227.md#1">掉发怎么办？中医6招教你长回浓密秀发</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/14/n14136611.md#1">已逝明星患的是终生疾病？关于红斑狼疮一篇看懂</a></li>
 <hr>
-
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/23/8/9/n14050509.htm">《七大罪：爱丁堡的恩怨2》影集：英雄之子如今也发光发热</a></p><hr>
-
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/23/8/9/n14050509.htm">《七大罪：爱丁堡的恩怨2》影评：英雄之子如今也发光发热</a></p><hr>
 <strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/19920513/djy/blob/master/gb/23/8/9/n14050509.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
